# poly-arbitrage

./: .dockerignore  .env.example  .envrc  .gitignore  AGENTS.md  README.md  alembic.ini  docker-compose.yml  next-steps.md  polymarket_research_platform_spec.md  pyproject.toml
.vibe/: brainstorming.md  checkpoints.md  key-decisions.md  logs.md  plan.md  system-design.md
alembic/: env.py
alembic/versions/: 20260319_2000_create_ingestion_tables.py  20260319_2130_rename_schedule_cursor_to_bootstrap_cursor.py  20260319_2230_add_checkpoint_keys.py
docker/: Dockerfile
scripts/: ingest_polymarket.py  init_ingestion_store.py  run_ingestion_api.py  run_ingestion_scheduler.py  run_ingestion_scheduler_service.py  run_ingestion_worker.py
src/poly_arbitrage/ingestion/: api.py  contracts.py  registry.py  runtime.py  scheduler.py  scheduler_service.py  service.py  settings.py  submission.py
src/poly_arbitrage/ingestion/archive/: batch_archive_layout.py  jsonl_batch_serializer.py
src/poly_arbitrage/ingestion/database/: database.py  metadata.py  registry.py  tables.py
src/poly_arbitrage/ingestion/dispatchers/: ingestion_dispatcher.py
src/poly_arbitrage/ingestion/factories/: job_factory.py  raw_record_factory.py
src/poly_arbitrage/ingestion/models/: artifact.py  batch.py  job.py  job_status.py  manifest.py  raw_record.py  request.py  schedule.py
src/poly_arbitrage/ingestion/object_stores/: local.py  local_filesystem_object_store.py  (+1 more)
tests/unit/ingestion/: test_api.py  test_clob.py  test_dispatcher.py  test_gamma.py  test_local_jsonl_state_store.py  test_object_store_raw_sink.py  test_repositories.py  test_s3_compatible_object_store.py  test_scheduler.py  test_scheduler_service.py  test_service.py  test_submission.py  test_worker.py
(+48 files in other folders)
